feat: Swagger is configured and described
Добавлена и настроена документация в Swagger'е.
Настроены CORS'ы для доступа к серверу через Tailscale funnel.